--- a/style.css
+++ b/style.css
@@ -20,15 +20,12 @@ body {
   grid-template-rows: repeat(4, 1fr) 0fr;
   row-gap: 2rem;
   column-gap: 2rem;
-  text-align: center;
 }
 
 .card-container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background-color: white;
+  background-color: hsl(235, 46%, 20%);
   color: black;
 }
 
@@ -38,11 +35,10 @@ body {
     border-radius: 15px;
     display: flex;
     flex-direction: column;
-    align-content: flex-start;
 }
 
 .main-container .profile {
-    height: 70%;
+    height: 80%;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -50,10 +46,27 @@ body {
     color: white;
     border-radius: 15px;
 }
+
+.main-container .selection {
+    color: white;
+    display: flex;
+    flex-direction: column;
+}
+
+.main-container .selection span {
+    margin: 0.5rem 1rem 1rem 1rem;
+    color: hsl(236, 100%, 87%);
+}
+
 .profile-img {
     width: 3.5rem;
     border: .25rem white solid;
     border-radius: 50%;
+}
+
+.card-title {
+    color: white;
+    font-size: 18px;
 }
 
 .work-container {
